--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Primeiro HTML</title>
+</head>
+<body>
+    <a href="https://www.instagram.com/imnotriki/">meu instagram</a>
+    <a href="https://www.spotify.com/br-pt/account/overview/?utm_source=spotify&utm_medium=menu&utm_campaign=your_account">Meu gosto Musical</a>
+    <a href="https://www.unifebe.edu.br/site/">Faculdade de Ensino superior que estou cursando</a>
+
+<h1 title="Meu primeito codigo">Meu primeiro Codigo HTML</h1>
+<h2>Introdução</h2>
+Introdução ao htlml
+
+<h3>Apresentação</h3>
+
+
+</body>
+</html>
