--- a/index.html
+++ b/index.html
@@ -53,3 +53,36 @@ Introdução ao htlml
 </html>
 
 
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Contato</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Entre em contato comigo</h2>
+            <p>Envie um e-mail para <a href="Ricardo.waldrich@unifebe.edu.br">Ricardo.waldrich@unifebe.edu.br</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Meu Site</p>
+    </footer>
+</body>
+</html>
+
